# HyPPO

./: README.md  exec_simphy.py  graph_convert.py  greedy_clusterer.py  hyppo.py  hyppo_classes.py  hyppo_simphy_util.py  hyppo_utils.py  oma_util.py  sequences.py  species_restrictor.py  utils.py
OCR/: Makefile  Makefile.in  OCR.pro  README_COMPILING.txt  autogen.sh  cluster.cpp  clusterfinder.cpp  clusterfinder.h  config.status  configure  configure.ac  main.cpp  main_archive.cpp  speciestreemaker.cpp  supergenetreemaker.h
OCR/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
OCR/div/: longcounter.h
OCR/src/: Makefile  Makefile.am  Makefile.in  OCR  README_COMPILING.txt  README_USAGE.txt  cluster.h  clusterfinder.cpp  speciestreemaker.h  supergenetreemaker.cpp
OCR/src/.deps/: cluster.Po  clusterfinder.Po  genespeciestreeutil.Po  longcounter.Po  main.Po  newicklex.Po  node.Po  speciestreemaker.Po  supergenetreemaker.Po  treeinfo.Po  treeiterator.Po
OCR/src/div/: define.h  longcounter.cpp  util.h
OCR/src/trees/: autester.cpp  genespeciestreeutil.cpp  genespeciestreeutil.h  newicklex.cpp  node.cpp  node.h  polysolver.cpp  polysolver_distance.cpp  polysolver_distance.h  treeinfo.cpp  treeiterator.cpp
OCR/trees/: newicklex.h  paralogycorrector.cpp  paralogycorrector.h  polysolver.h  polysolver_nad.cpp  polysolver_nad.h  treeinfo.h  treeiterator.h
experiments/: README.txt  data_commands.txt  exec_simphy.py  hyppo_simphy_util.py  utils.py
experiments/simphy_files/: DL0000005.conf  DL000001.conf  (+5 more)
sgutils/: Makefile  main.cpp  sgutil.pro  sgutils
(+7 files in other folders)
