bin_PROGRAMS = OCR

AM_CXXFLAGS = $(INTI_CFLAGS)

OCR_SOURCES = main.cpp clusterfinder.h clusterfinder.cpp cluster.cpp cluster.h speciestreemaker.h speciestreemaker.cpp supergenetreemaker.cpp supergenetreemaker.h trees/genespeciestreeutil.cpp trees/newicklex.cpp trees/node.cpp trees/treeinfo.cpp trees/treeiterator.cpp div/longcounter.cpp trees/genespeciestreeutil.h trees/newicklex.h trees/node.h trees/treeinfo.h trees/treeiterator.h div/util.h div/tinydir.h div/longcounter.h
OCR_LDADD = $(INTI_LIBS)
